--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Terminal In Place",
   "description": "Launch your own vscode terminal in the directory of your focus file.",
   "icon": "images/favicon.png",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": "Maples7 <maples7.com>",
   "publisher": "Maples7",
   "license": "GPL-3.0-only",
@@ -51,10 +51,10 @@
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
-    "typescript": "^3.1.4",
-    "vscode": "^1.1.25",
-    "tslint": "^5.8.0",
-    "@types/node": "^8.10.25",
-    "@types/mocha": "^2.2.42"
+    "@types/mocha": "^2.2.42",
+    "@types/node": "^8.10.48",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
+    "vscode": "^1.1.33"
   }
 }
